# teenytorch

./: LICENSE  README.md  pyproject.toml
teenytorch/: __init__.py  tensor.py
tests/: test_import.py  test_tensor.py
